<resources>
    <string name="app_name">TrueLink</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_spalsh_sceen">SpalshSceen</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="fact">Fact :</string>
    <string name="welcome_text_1">99% of hacking is occur due to clicking on fake links</string>
    <string name="hacking_alert">HACKING  </string>
    <string name="welcome_text_2">Truelink is your best friend to protect you against hackers</string>
    <string name="stat">Stats :</string>
    <string name="welcome_text_3">Truelink scans over 2 million links daily to keep you safe from hacking and phishing attacks!</string>
    <string name="hint_phone">Enter mobile number</string>
    <string name="privacy_msg"><![CDATA[By checking this  you are confirming that you have read and agree to Truelink\'s Privacy Policy  and & Term of Use]]></string>
    <string name="generate_otp">Generate OTP</string>
    <string name="login_text">Enter your phone number to continue</string>
    <string name="login_subtext">we will send you a verification code</string>
    <string name="default_country">+91</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="error_privacy">Agree Privacy Policy to continue</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="accept">I Accept</string>
    <string name="privacy_text"><![CDATA[<!DOCTYPE html>
<html>
<head><link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /></head>
<body>

<div class="v1_10">

<div class="v1_14"><span STYLE="font-size:16.0pt">AN Brothers E-Learning Private Limited</span><span class="v1_16"><br/>Last updated: November 16, 2022</span></div><br/><div class="v1_17"><span class="v1_18">This Privacy Policy describes Our policies and procedures on the collection,
use and disclosure of Your information when You use the Service and tells You
about Your privacy rights and how the law protects You. One of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by truelink and how we use it.<br/><br/>
</span><span class="v1_19">We use Your Personal data to provide and improve the Service. By using the
Service, You agree to the collection and use of information in accordance with
this Privacy Policy.
</span></div><br/><br/><div class="v1_20"><span STYLE="font-size:16.0pt">Consent</span>
<br/><br/>
<br>By using our application, you hereby consent to our Privacy Policy and agree to its terms</br></div><div class="v1_22"><span STYLE="font-size:16.0pt">Interpretation and Definitions  </span>
<br/><br/><br/><span class="v1_24">Interpretation</span><span class="v1_25">The words of which the initial letter is capitalized have meanings defined
under the following conditions. The following definitions shall have the same
meaning regardless of whether they appear in singular or in plural.</span></div></div></div></div></div></body></html> ]]></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp">Entr OTP sent to your phone number</string>
    <string name="verify"><![CDATA[Verify & Continue]]></string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="otp_lenght_error">OTP should be of 4 digit</string>
    <string name="login_error">"Login Error  "</string>
    <string name="gender_male">Male</string>
    <string name="about_you">About You</string>
    <string name="ok">Ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Your Name</string>
    <string name="fill"><![CDATA[-----------            Continue with            -----------]]></string>
    <string name="update">Update</string>
    <string name="select_day">Day</string>
    <string name="select_year">Year</string>
    <string name="select_month">Month</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="finish">Finish Up</string>
    <string name="error">Something went wrong, please check logs</string>
    <string name="select_dob">Select Your Date of Birth</string>
    <string name="error_dob">Select your Date of Birth</string>
    <string name="error_enter_full_name">Enter your full name</string>
    <string name="error_select_gender">Select your Gender</string>
    <string name="msg_token_fmt">FCM Token : </string>
    <string name="token_refresh">Access Token Refreshed</string>
    <string name="no_internet">You are not connected to internet, please check your connection and try again.</string>
    <string name="otp_not_receive">Didn\'t Received OTP Yet?</string>
    <string name="resend_otp">Resend OTP in </string>
    <string name="seconds">Seconds</string>
    <string name="click_resend">Click here to Resend OTP</string>
    <string name="title_bulk_scan">Bulk Scan</string>
    <string name="title_threat_control">Threat Control</string>
    <string name="title_url_shortener">Shortener</string>
    <string name="title_alert">Alert</string>
    <string name="required_permissions">Give required permissions for better performance</string>
    <string name="dialog_permission_title">PermissionManger</string>
    <string name="dialog_permission_default_message">Default Message</string>
    <string name="dialog_permission_button_positive">Ok</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="connect">Connect</string>
    <string name="account_inf">Account Info</string>
    <string name="hint_user_id">User Id</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_mobile">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_dob">Birthday</string>
    <string name="app_settings">App Settings</string>
    <string name="fav_browser">Favourite Browser</string>
    <string name="other">Other</string>
    <string name="custom_notification">Customize Notifications</string>
    <string name="warn">Warn</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="submitted_link">"Submitted Link Reports "</string>
    <string name="faq">FAQ</string>
    <string name="contact">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="chrome">Chrome</string>
    <string name="hint_gender">Gender</string>
    <string name="save">Save</string>
    <string name="fromgallery">Gallery</string>
    <string name="fromcamera">Camera</string>
    <string name="select_source">Select Source</string>
    <string name="grant_permission">Please grant the permission to access camera and the device storage</string>
    <string name="safe_link">Links are safe  </string>
    <string name="safe_links_1">Safe Links</string>
    <string name="suspicious_link">Suspicious Links</string>
    <string name="browser_link">Scanned within Browser </string>
    <string name="app_link">Link Received in Apps</string>
    <string name="total_scan">Total Link Scanned </string>
    <string name="link_clicked">Link Clicked</string>
    <string name="verified_link">Verified Links</string>
    <string name="recent_scan">Recent Scans</string>
    <string name="tab_all">All</string>
    <string name="tab_safe">Safe</string>
    <string name="tab_verified">Verified</string>
    <string name="tab_suspicious">Suspicious</string>
    <string name="time">12 : 19 PM</string>
    <string name="url">http://www.amazon.com/eviubdiuvbdivufiew</string>
    <string name="phishing">Phishing</string>
    <string name="verified">Verified</string>
    <string name="social_media">Social Media</string>
    <string name="source">Link Source</string>
    <string name="social_apps">Social Apps</string>
    <string name="browser_security">Browser Security</string>
    <string name="default_scanner">Default Scanner</string>
    <string name="notification_access">Allow to access notifications</string>
    <string name="risk_warning">Your Device is at Risk</string>
    <string name="draw_over_apps">Allow to draw over other Apps</string>
    <string name="settings_completion">Complete your settings for maximum security</string>
    <string name="accidental_clicks">Prevent accidental clicks on any harmful link</string>
    <string name="secure_social_apps">Secure social media apps with Notification Access</string>
    <string name="browsing_security">Activate Broweser Security for safe browsing</string>
    <string name="set_default">Set Default</string>
    <string name="enable">Enable</string>
    <string name="activate">Activate</string>
    <string name="text1">Set Truelink as your default browser app for enhanced security.</string>
    <string name="text2">Don\'t worry Truelink redirects safe links to your favorite browser, blocks harmful links for secure browsing.</string>
    <string name="text3">To secure your social media apps, it is essential to allow notification access permission on your device</string>
    <string name="text4">To secure your browsing experience on any supported browser, allow the Accessibility permission to activate Browser Security</string>
    <string name="month">last 30 days </string>
    <string name="two_month">last 60 days </string>
    <string name="quarter">last 90 days </string>
    <string-array name="filter">
        <item>@string/month</item>
        <item>@string/two_month</item>
        <item>@string/quarter</item>
    </string-array>
    <string name="allow">Allow</string>
    <string name="overall">Overall</string>
    <string name="title_bottom_sheet">Filter by Sender Title</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="search_senders">Search in Senders</string>
    <string name="top_apps">Top Apps</string>
    <string name="search_apps">Search Apps</string>
    <string name="fraudulent">Fraudulent</string>
    <string name="malware">Malware</string>
    <string name="spam">Spam</string>
    <string name="empty_list">No previous records found.</string>
    <string name="safe">Safe</string>
    <string name="medium">Medium</string>
    <string name="critical">Critical</string>
    <string name="high">High</string>
    <string name="open">Open</string>
    <string name="report">Report</string>
    <string name="not_spam">Not Spam</string>
    <string name="sandbox">Sandbox</string>
    <string name="worldwide">Worldwide</string>
    <string name="reports">Reports</string>
    <string name="scanned_on">Scanned On</string>
    <string name="sent_by">Send By</string>
    <string name="technical_info">Technical Info</string>
    <string name="dummy_value">Dummy value</string>
    <string name="shorten_link">"Shorten Link           :    "</string>
    <string name="site_domain">"Site Domain            :    "</string>
    <string name="scanned_url">"Scanned URL          :    "</string>
    <string name="page_title">"Page Title                  :    "</string>
    <string name="origin">Origin IP</string>
    <string name="location">Server Location</string>
    <string name="hosting">Hosting </string>
    <string name="connection">Connection</string>
    <string name="report_link">Report this link</string>
    <string name="select_severity">Select severity</string>
</resources>