<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/txt_privacy_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
            android:padding="@dimen/_5sdp"
            android:text="@string/title_privacy"
            android:textColor="@color/gray_200"
            android:textSize="@dimen/text24" />

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:text="@string/privacy_text"
            android:textColor="@color/gray_200" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin20"
            android:backgroundTint="@color/login_btn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:spinning_bar_color="@android:color/black"
            app:spinning_bar_padding="8dp"
            app:spinning_bar_width="4dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>