<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/margin10">

    <ImageView
        android:layout_width="@dimen/margin200"
        android:layout_height="@dimen/margin70"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin10"
        android:src="@drawable/ic_logo_white_tgline" />

    <ImageView
        android:layout_width="@dimen/margin200"
        android:layout_height="@dimen/margin200"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin70"
        android:layout_marginBottom="@dimen/margin10"
        android:src="@drawable/ic_login_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/login_subtext"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/_12sdp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20"
        app:cardBackgroundColor="@color/gray_200"
        app:cardCornerRadius="@dimen/_2sdp"
        app:cardElevation="@dimen/margin10">

        <LinearLayout
            android:id="@+id/ll_login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtinp_userphone_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_200"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <CheckBox
        android:id="@+id/chk_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:gravity="center"
        android:text="@string/privacy_msg"
        android:textColor="@color/gray_200"
        android:textSize="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin20"
        android:backgroundTint="@color/login_btn"
        android:gravity="center"
        android:text="@string/generate_otp"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp" />

    <!--  app:spinning_bar_width="4dp" &lt;!&ndash; Optional &ndash;&gt;
      app:spinning_bar_color="#FFF" &lt;!&ndash; Optional &ndash;&gt;
      app:spinning_bar_padding="6dp" &lt;!&ndash; Optional &ndash;&gt;-->
</LinearLayout>