<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cord_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/ll_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/primary_color"
        android:orientation="vertical"
        android:padding="@dimen/margin10"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/txt_dialog_header"
            style="@style/textViewFontInter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
            android:padding="@dimen/margin5"
            android:text="@string/title_bottom_sheet"
            android:textColor="@color/gray_200"
            android:textSize="@dimen/text16" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:background="@drawable/background_round_no_border"
            android:textColor="@color/white"
            app:defaultQueryHint="@string/search_senders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_senders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_senders_item" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin60"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="@dimen/margin10"
            android:gravity="center_vertical"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin10"
                android:layout_weight="1"
                android:background="@drawable/background_round_selected_border"
                android:enabled="false"
                android:text="@string/clear_filter"
                android:textAllCaps="false"
                android:textColor="@color/selected_color"
                android:textSize="@dimen/text12"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/margin10"
                android:layout_weight="1"
                android:background="@drawable/background_round_no_border"
                android:backgroundTint="@color/selected_color"
                android:enabled="false"
                android:text="@string/apply_filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text12"
                app:backgroundTint="@null" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>