<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/margin350"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/margin50"
            android:layout_height="@dimen/margin50"
            android:layout_margin="@dimen/margin5"
            android:gravity="center"
            android:src="@drawable/ic_settings" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/textViewFontSora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:paddingLeft="@dimen/margin10"
            android:text="@string/accidental_clicks"
            android:textColor="@color/white"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_text1"
        style="@style/textViewFontInter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="@color/transparent80"
        android:textSize="@dimen/text14" />

    <TextView
        android:id="@+id/tv_text2"
        style="@style/textViewFontInter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin10"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="@color/transparent80"
        android:textSize="@dimen/text14" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_app_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin10"
        android:visibility="gone" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/iv_gif"
        android:layout_width="@dimen/margin250"
        android:layout_height="@dimen/margin250"
        android:layout_gravity="center"
        android:src="@drawable/truelink_set_default_browser" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/id_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin10"
        android:gravity="center"
        android:text="@string/set_default"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text14"
        app:backgroundTint="@color/green" />

</LinearLayout>